--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/websockets": "^10.3.8",
+    "@reduxjs/toolkit": "^2.2.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
