--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/websockets": "^10.3.8",
+    "@prisma/client": "^5.13.0",
     "@reduxjs/toolkit": "^2.2.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -59,6 +60,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "prisma": "^5.13.0",
     "tailwindcss": "3.4.3",
     "typescript": "~5.4.5",
     "vite": "~5.2.10",
